--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,3 @@
 {
-    "/addons/fitlytics/finnito/fitlytics-theme/resources/css/theme.css": "/addons/fitlytics/finnito/fitlytics-theme/resources/css/theme.css"
+    "/css/style.css": "/css/style.css"
 }
