Update composer.json and composer.lock

--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,8 @@
         "anomaly/wysiwyg_block-extension": "~1.0.0",
         "pyrocms/starter-theme": "~1.0.0",
         "pyrocms/accelerant-theme": "~1.2.0",
-        "laravel/framework": "v8.36.2"
+        "laravel/framework": "v8.36.2",
+        "guzzlehttp/guzzle": "^7.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
