--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "anomaly/users-module": "~2.5.0",
         "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "v8.36.2",
+        "laravel/tinker": "^2.6",
         "pyrocms/accelerant-theme": "~1.2.0",
         "pyrocms/starter-theme": "~1.0.0"
     },
@@ -57,7 +58,7 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*",
+        "symfony/dom-crawler": "3.1.*"
     },
     "repositories": [
         {
