--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "anomaly/url-field_type": "^2.2",
         "anomaly/user_security_check-extension": "~2.1.0",
         "anomaly/users-module": "~2.5.0",
+        "composer/composer": "^2.1",
         "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "v8.36.2",
         "laravel/tinker": "^2.6",
